[package]
name = "blockchainApi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blockchainApi"
path = "src/main.rs"

[lib]
name = "blockchainApi"
path = "src/lib.rs"

[dependencies]
crypto-hash = "0.3.4"
actix-web = "4"
serde = { version = "^1", features = ["derive"] }
derive_more = "0.99.17"
lazy_static = "1.4.0"